Fixed display bug with unwanted scrollbars

--- a/client/template/task/task-list-item.css
+++ b/client/template/task/task-list-item.css
@@ -20,6 +20,7 @@ h4 .task-completed {
 
 #entityTaskList > .panel-body{
   padding: 0;
+  height: 100%;
 }
 
 #taskContainer {
